--- a/Common/WhitePage.Entities/WhitePage.Entities.csproj
+++ b/Common/WhitePage.Entities/WhitePage.Entities.csproj
@@ -55,6 +55,7 @@
     <Compile Include="CaseManagement\LookupDetail.cs" />
     <Compile Include="CaseManagement\PeaceMaker.cs" />
     <Compile Include="CaseManagement\State.cs" />
+    <Compile Include="CaseManagement\vCaseAddress.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\Claim.cs" />
   </ItemGroup>
