--- a/Common/WhitePage.Entities/WhitePage.Entities.csproj
+++ b/Common/WhitePage.Entities/WhitePage.Entities.csproj
@@ -48,6 +48,9 @@
     <Compile Include="CaseManagement\CaseBook.cs" />
     <Compile Include="CaseManagement\CaseChildren.cs" />
     <Compile Include="CaseManagement\CaseHeader.cs" />
+    <Compile Include="CaseManagement\CaseOffender.cs" />
+    <Compile Include="CaseManagement\CasePhysicalHealth.cs" />
+    <Compile Include="CaseManagement\CaseSpouse.cs" />
     <Compile Include="CaseManagement\CaseStatus.cs" />
     <Compile Include="CaseManagement\Center.cs" />
     <Compile Include="CaseManagement\City.cs" />
@@ -59,6 +62,7 @@
     <Compile Include="CaseManagement\State.cs" />
     <Compile Include="CaseManagement\vCaseAddress.cs" />
     <Compile Include="CaseManagement\vCaseChildren.cs" />
+    <Compile Include="CaseManagement\vCaseOffender.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\Claim.cs" />
   </ItemGroup>
