--- a/Common/WhitePage.Entities/WhitePage.Entities.csproj
+++ b/Common/WhitePage.Entities/WhitePage.Entities.csproj
@@ -50,8 +50,10 @@
     <Compile Include="CaseManagement\CaseChildren.cs" />
     <Compile Include="CaseManagement\CaseHeader.cs" />
     <Compile Include="CaseManagement\CaseManage.cs" />
+    <Compile Include="CaseManagement\CaseMental.cs" />
     <Compile Include="CaseManagement\CaseOffender.cs" />
     <Compile Include="CaseManagement\CasePhysicalHealth.cs" />
+    <Compile Include="CaseManagement\CaseSessionLog.cs" />
     <Compile Include="CaseManagement\CaseSpouse.cs" />
     <Compile Include="CaseManagement\CaseStatus.cs" />
     <Compile Include="CaseManagement\Center.cs" />
@@ -64,6 +66,7 @@
     <Compile Include="CaseManagement\State.cs" />
     <Compile Include="CaseManagement\vCaseAddress.cs" />
     <Compile Include="CaseManagement\vCaseChildren.cs" />
+    <Compile Include="CaseManagement\vCaseMental.cs" />
     <Compile Include="CaseManagement\vCaseOffender.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\Claim.cs" />
