--- a/Web/WhitePage.MyWeb.UI/package.json
+++ b/Web/WhitePage.MyWeb.UI/package.json
@@ -37,7 +37,8 @@
     "rxjs": "5.2.0",
     "ts-helpers": "1.1.2",
     "zone.js": "0.8.5",
-    "ng2-toastr": "4.0.1"
+    "ng2-toastr": "4.0.1",
+    "angular-2-dropdown-multiselect": "^1.1.0"
   },
   "devDependencies": {
     "@angular/cli": "1.0.0",
