--- a/Common/WhitePage.Entities/WhitePage.Entities.csproj
+++ b/Common/WhitePage.Entities/WhitePage.Entities.csproj
@@ -71,6 +71,7 @@
     <Compile Include="CaseManagement\vCaseFeedback.cs" />
     <Compile Include="CaseManagement\vCaseMental.cs" />
     <Compile Include="CaseManagement\vCaseOffender.cs" />
+    <Compile Include="CaseManagement\vCaseSessionLog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\Claim.cs" />
   </ItemGroup>
