feat: Added an enumerable ECaseStatus for referring the delete case status.

--- a/Infrastructure/WhitePage.ResourceAccess/WhitePage.ResourceAccess.csproj
+++ b/Infrastructure/WhitePage.ResourceAccess/WhitePage.ResourceAccess.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ECaseStatus.cs" />
     <Compile Include="Contracts\Core\ICommonDataAccess.cs" />
     <Compile Include="Contracts\Ops\ICaseDataAccess.cs" />
     <Compile Include="Contracts\Security\ILoginDataAccess.cs" />
