--- a/Web/WhitePage.MyWeb.UI/package.json
+++ b/Web/WhitePage.MyWeb.UI/package.json
@@ -45,8 +45,10 @@
     "zone.js": "0.8.5"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0",
+    "@angular/cli": "1.2.6",
     "@angular/compiler-cli": "4.0.0",
+    "@angular/common": "4.0.0",
+    "@angular/compiler": "4.0.0",
     "@types/jasmine": "2.5.46",
     "@types/lodash": "^4.14.66",
     "@types/node": "7.0.10",
