--- a/Common/WhitePage.Entities/WhitePage.Entities.csproj
+++ b/Common/WhitePage.Entities/WhitePage.Entities.csproj
@@ -74,6 +74,7 @@
     <Compile Include="CaseManagement\vCaseSessionLog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\Claim.cs" />
+    <Compile Include="Security\User.cs" />
     <Compile Include="Security\UserRole.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
