chore: updated angular to its latest versions (for fixing form control issue)

--- a/Web/WhitePage.MyWeb.UI/appsettings.json
+++ b/Web/WhitePage.MyWeb.UI/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "Data": {
     "WhitePageConnectionString": {
-      "ConnectionString": "Server=.; Initial Catalog=WhitePageDb; Integrated Security=SSPI; multipleactiveresultsets=true"
+      "ConnectionString": "Server=QATVDCSD009\\SQL2014; Initial Catalog=MyChoices.Production; Integrated Security=SSPI; multipleactiveresultsets=true"
     }
   },
   "Logging": {
