--- a/Web/WhitePage.MyWeb.UI/appsettings.json
+++ b/Web/WhitePage.MyWeb.UI/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "Data": {
     "WhitePageConnectionString": {
-      "ConnectionString": "Server=.; Initial Catalog=WhitePageDb; Integrated Security=SSPI; multipleactiveresultsets=true"
+      "ConnectionString": "Server=QATVDCSD033; Initial Catalog=tempp; Integrated Security=SSPI; multipleactiveresultsets=true"
     }
   },
   "Logging": {
