--- a/Common/WhitePage.Entities/WhitePage.Entities.csproj
+++ b/Common/WhitePage.Entities/WhitePage.Entities.csproj
@@ -74,6 +74,10 @@
     <Compile Include="CaseManagement\vCaseOffender.cs" />
     <Compile Include="CaseManagement\vCaseSessionLog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RedAlert\IpDetails.cs" />
+    <Compile Include="RedAlert\PostSvp.cs" />
+    <Compile Include="RedAlert\PreSvp.cs" />
+    <Compile Include="RedAlert\SerialNumbertrackerRA.cs" />
     <Compile Include="Security\Claim.cs" />
     <Compile Include="Security\User.cs" />
     <Compile Include="Security\UserRole.cs" />
