--- a/NexGenRedAlert/NexGenRedAlert/NexGenRedAlert.csproj
+++ b/NexGenRedAlert/NexGenRedAlert/NexGenRedAlert.csproj
@@ -28,6 +28,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Views\PostSvpFormTabbed.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\PreSvpForm.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
