--- a/NexGenRedAlert/NexGenRedAlert.Android/NexGenRedAlert.Android.csproj
+++ b/NexGenRedAlert/NexGenRedAlert.Android/NexGenRedAlert.Android.csproj
@@ -42,6 +42,10 @@
     <AotAssemblies>false</AotAssemblies>
     <EnableLLVM>false</EnableLLVM>
     <BundleAssemblies>false</BundleAssemblies>
+    <AndroidLinkMode>SdkOnly</AndroidLinkMode>
+    <AndroidSupportedAbis />
+    <JavaMaximumHeapSize>
+    </JavaMaximumHeapSize>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Android" />
@@ -51,6 +55,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Identity.Client">
+      <Version>1.1.2-preview0008</Version>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>10.0.3</Version>
     </PackageReference>
@@ -65,6 +72,7 @@
     <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="25.4.0.2" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Security\ActivityCustomUrlSchemeInterceptor.cs" />
     <Compile Include="implementation\NetworkConnection.cs" />
     <Compile Include="implementation\ToastMessage.cs" />
     <Compile Include="MainActivity.cs" />
@@ -99,6 +107,9 @@
       <Project>{6EFF6315-26BC-4841-AC35-EAB54E11DD9E}</Project>
       <Name>NexGenRedAlert</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\LoginLogo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
