--- a/Infrastructure/WhitePage.BusinessAccess/WhitePage.BusinessAccess.csproj
+++ b/Infrastructure/WhitePage.BusinessAccess/WhitePage.BusinessAccess.csproj
@@ -43,11 +43,13 @@
   <ItemGroup>
     <Compile Include="Contracts\Core\ICommonBusinessAccess.cs" />
     <Compile Include="Contracts\Ops\ICaseBusinessAccess.cs" />
-    <Compile Include="Contracts\Ops\ISvpBusinessAccess.cs" />
+    <Compile Include="Contracts\RedAlert\Ops\ISvpBusinessAccess.cs" />
+    <Compile Include="Contracts\RedAlert\Security\IRALoginBusinessAccess.cs" />
     <Compile Include="Contracts\Security\ILoginBusinessAccess.cs" />
     <Compile Include="Implementation\Core\CommonBusinessAccess.cs" />
     <Compile Include="Implementation\Ops\CaseBusinessAccess.cs" />
-    <Compile Include="Implementation\Ops\SvpBusinessAccess.cs" />
+    <Compile Include="Implementation\RedAlert\Ops\SvpBusinessAccess.cs" />
+    <Compile Include="Implementation\RedAlert\Security\RALoginBusinessAccess.cs" />
     <Compile Include="Implementation\Security\LoginBusinessAccess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
