--- a/NexGenRedAlert/NexGenRedAlert.Android/NexGenRedAlert.Android.csproj
+++ b/NexGenRedAlert/NexGenRedAlert.Android/NexGenRedAlert.Android.csproj
@@ -72,10 +72,10 @@
     <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="25.4.0.2" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="implementation\CredentialServices.cs" />
+    <Compile Include="Implementation\CredentialServices.cs" />
     <Compile Include="Security\ActivityCustomUrlSchemeInterceptor.cs" />
-    <Compile Include="implementation\NetworkConnection.cs" />
-    <Compile Include="implementation\ToastMessage.cs" />
+    <Compile Include="Implementation\NetworkConnection.cs" />
+    <Compile Include="Implementation\ToastMessage.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
