--- a/Common/WhitePage.Entities/WhitePage.Entities.csproj
+++ b/Common/WhitePage.Entities/WhitePage.Entities.csproj
@@ -75,7 +75,7 @@
     <Compile Include="CaseManagement\vCaseSessionLog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RedAlert\Security\ImplementingPartner.cs" />
-    <Compile Include="RedAlert\PostSvp.cs" />
+    <Compile Include="RedAlert\Svp.cs" />
     <Compile Include="RedAlert\PreSvp.cs" />
     <Compile Include="RedAlert\SerialNumbertrackerRA.cs" />
     <Compile Include="Security\Claim.cs" />
