Reverting the appsettings.json

--- a/Web/WhitePage.MyWeb.UI/appsettings.json
+++ b/Web/WhitePage.MyWeb.UI/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Data": {
     "WhitePageConnectionString": {
-      "ConnectionString": "Server=tcp:mychoicestest.database.windows.net,1433;Initial Catalog=WhitePage.MainDb;Persist Security Info=False;User ID=mcptadmin;Password=Kum.96777;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+      "ConnectionString": "Server=.; Initial Catalog=WhitePageDb; Integrated Security=SSPI; multipleactiveresultsets=true"
     }
   },
   "Logging": {
@@ -16,8 +16,5 @@
     "ServerName": ".",
     "ServerCredentials": "Integrated Security=SSPI; multipleactiveresultsets=true",
     "CommandTimeout": 60
-  },
-  "ApplicationInsights": {
-    "InstrumentationKey": "1b40c5d6-fac1-4408-a459-3c9cb0fa82bc"
   }
 }
