--- a/NexGenRedAlert/NexGenRedAlert.Android/NexGenRedAlert.Android.csproj
+++ b/NexGenRedAlert/NexGenRedAlert.Android/NexGenRedAlert.Android.csproj
@@ -59,12 +59,12 @@
       <Version>1.1.2-preview0008</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
-      <Version>10.0.3</Version>
+      <Version>11.0.1</Version>
     </PackageReference>
     <PackageReference Include="PCLCrypto">
       <Version>2.0.147</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="2.5.0.122203" />
+    <PackageReference Include="Xamarin.Forms" Version="2.5.0.280555" />
     <PackageReference Include="Xamarin.Android.Support.Design" Version="25.4.0.2" />
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="25.4.0.2" />
     <PackageReference Include="Xamarin.Android.Support.v4" Version="25.4.0.2" />
@@ -72,6 +72,7 @@
     <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="25.4.0.2" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Custom\MultiselectEntryRenderer.cs" />
     <Compile Include="Implementation\CredentialServices.cs" />
     <Compile Include="Security\ActivityCustomUrlSchemeInterceptor.cs" />
     <Compile Include="Implementation\NetworkConnection.cs" />
