--- a/NexGenRedAlert/NexGenRedAlert.Android/NexGenRedAlert.Android.csproj
+++ b/NexGenRedAlert/NexGenRedAlert.Android/NexGenRedAlert.Android.csproj
@@ -64,6 +64,9 @@
     <PackageReference Include="PCLCrypto">
       <Version>2.0.147</Version>
     </PackageReference>
+    <PackageReference Include="sqlite-net-pcl">
+      <Version>1.5.166-beta</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.280555" />
     <PackageReference Include="Xamarin.Android.Support.Design" Version="25.4.0.2" />
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="25.4.0.2" />
@@ -74,6 +77,7 @@
   <ItemGroup>
     <Compile Include="Custom\MultiselectEntryRenderer.cs" />
     <Compile Include="Implementation\CredentialServices.cs" />
+    <Compile Include="Implementation\FileHelper.cs" />
     <Compile Include="Security\ActivityCustomUrlSchemeInterceptor.cs" />
     <Compile Include="Implementation\NetworkConnection.cs" />
     <Compile Include="MainActivity.cs" />
@@ -81,6 +85,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidAsset Include="Assets\NeXGenDB.db3" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
   </ItemGroup>
@@ -122,5 +127,6 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\alert.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
