--- a/NexGenRedAlert/NexGenRedAlert.Android/Properties/AndroidManifest.xml
+++ b/NexGenRedAlert/NexGenRedAlert.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.NexGenRedAlert" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.Quantium.NexGenRedAlert" android:installLocation="auto" android:versionName="0.2" android:versionCode="2">
 	<uses-sdk android:minSdkVersion="15" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.ACCESS_CHECKIN_PROPERTIES" />
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<application android:label="NexGenRedAlert.Android" android:icon="@drawable/icon"></application>
 </manifest>
