--- a/NexGenRedAlert/NexGenRedAlert/NexGenRedAlert.csproj
+++ b/NexGenRedAlert/NexGenRedAlert/NexGenRedAlert.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.Identity.Client" Version="1.1.2-preview0008" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.1-beta3" />
     <PackageReference Include="PCLCrypto" Version="2.0.147" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.5.166-beta" />
     <PackageReference Include="System.Reflection" Version="4.3.0" />
     <PackageReference Include="System.Reflection.TypeExtensions" Version="4.4.0" />
     <PackageReference Include="Xamarin.Auth" Version="1.5.0.3" />
@@ -26,8 +27,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="Views\AboutPage.xaml.cs">
+    <Compile Update="Views\NetworkAlertPage.xaml.cs">
       <SubType>Code</SubType>
+      <DependentUpon>NetworkAlertPage.xaml</DependentUpon>
     </Compile>
     <Compile Update="Views\PreSvpFormPage.xaml.cs">
       <DependentUpon>PreSvpFormPage.xaml</DependentUpon>
