--- a/NexGenRedAlert/NexGenRedAlert.Android/NexGenRedAlert.Android.csproj
+++ b/NexGenRedAlert/NexGenRedAlert.Android/NexGenRedAlert.Android.csproj
@@ -127,6 +127,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\alert.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\RedAlertLogo.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
