--- a/Common/WhitePage.Entities/WhitePage.Entities.csproj
+++ b/Common/WhitePage.Entities/WhitePage.Entities.csproj
@@ -74,6 +74,7 @@
     <Compile Include="CaseManagement\vCaseOffender.cs" />
     <Compile Include="CaseManagement\vCaseSessionLog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RedAlert\ProgrammePlanning.cs" />
     <Compile Include="RedAlert\Security\ImplementingPartner.cs" />
     <Compile Include="RedAlert\Svp.cs" />
     <Compile Include="RedAlert\PreSvp.cs" />
