--- a/Web/WhitePage.MyWeb.UI/package.json
+++ b/Web/WhitePage.MyWeb.UI/package.json
@@ -36,7 +36,7 @@
     "core-js": "2.4.1",
     "highcharts": "^5.0.14",
     "lodash": "^4.17.4",
-    "moment": "2.18.1",
+    "moment": "^2.21.0",
     "mydatepicker": "1.10.1",
     "ng-select": "^1.0.0-beta.6",
     "ng2-bootstrap": "1.4.2",
