--- a/Infrastructure/WhitePage.BusinessAccess/WhitePage.BusinessAccess.csproj
+++ b/Infrastructure/WhitePage.BusinessAccess/WhitePage.BusinessAccess.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NReco.PdfGenerator, Version=1.1.15.0, Culture=neutral, PublicKeyToken=231663d50a41b451, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\NReco.PdfGenerator.1.1.15\lib\net20\NReco.PdfGenerator.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -48,6 +51,8 @@
     <Compile Include="Contracts\Security\ILoginBusinessAccess.cs" />
     <Compile Include="Implementation\Core\CommonBusinessAccess.cs" />
     <Compile Include="Implementation\Ops\CaseBusinessAccess.cs" />
+    <Compile Include="Implementation\RedAlert\Ops\PdfTemplate.cs" />
+    <Compile Include="Implementation\RedAlert\Ops\PdfMailer.cs" />
     <Compile Include="Implementation\RedAlert\Ops\SvpBusinessAccess.cs" />
     <Compile Include="Implementation\RedAlert\Security\RALoginBusinessAccess.cs" />
     <Compile Include="Implementation\Security\LoginBusinessAccess.cs" />
@@ -67,6 +72,8 @@
       <Name>WhitePage.ResourceAccess</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
