--- a/Common/WhitePage.Entities/WhitePage.Entities.csproj
+++ b/Common/WhitePage.Entities/WhitePage.Entities.csproj
@@ -76,7 +76,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RedAlert\ProgrammePlanning.cs" />
     <Compile Include="RedAlert\Revisit.cs" />
-    <Compile Include="RedAlert\Security\ImplementingPartner.cs" />
+    <Compile Include="RedAlert\Security\RedAlertUser.cs" />
     <Compile Include="RedAlert\Svp.cs" />
     <Compile Include="RedAlert\PreSvp.cs" />
     <Compile Include="RedAlert\SerialNumbertrackerRA.cs" />
