MC-213 Added the Pre-SVP QC form in NeXGen RedAlert (server-side)

--- a/Common/WhitePage.Entities/WhitePage.Entities.csproj
+++ b/Common/WhitePage.Entities/WhitePage.Entities.csproj
@@ -74,6 +74,7 @@
     <Compile Include="CaseManagement\vCaseOffender.cs" />
     <Compile Include="CaseManagement\vCaseSessionLog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RedAlert\PreSvpQC.cs" />
     <Compile Include="RedAlert\ProgrammePlanning.cs" />
     <Compile Include="RedAlert\Revisit.cs" />
     <Compile Include="RedAlert\Security\RedAlertUser.cs" />
