MC-213 Added PreSvpQCForm to NexGenRedAlert (Mobile app)

--- a/NexGenRedAlert/NexGenRedAlert/NexGenRedAlert.csproj
+++ b/NexGenRedAlert/NexGenRedAlert/NexGenRedAlert.csproj
@@ -32,6 +32,9 @@
       <SubType>Code</SubType>
       <DependentUpon>NetworkAlertPage.xaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\PreSvpQCFormPage.xaml.cs">
+      <DependentUpon>PreSvpQCFormPage.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\ProgrammePlanningFormPage.xaml.cs">
       <DependentUpon>ProgrammePlanningFormPage.xaml</DependentUpon>
     </Compile>
@@ -48,6 +51,9 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\MenuPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\PreSvpQCFormPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\ProgrammePlanningFormPage.xaml">
