--- a/Common/WhitePage.Entities/WhitePage.Entities.csproj
+++ b/Common/WhitePage.Entities/WhitePage.Entities.csproj
@@ -77,6 +77,7 @@
     <Compile Include="RedAlert\PostSvpQC.cs" />
     <Compile Include="RedAlert\PreSvpQC.cs" />
     <Compile Include="RedAlert\ProgrammePlanning.cs" />
+    <Compile Include="RedAlert\RakshakMonthlyReport.cs" />
     <Compile Include="RedAlert\RakshakRegistration.cs" />
     <Compile Include="RedAlert\Revisit.cs" />
     <Compile Include="RedAlert\Security\RedAlertUser.cs" />
