--- a/Common/WhitePage.Entities/WhitePage.Entities.csproj
+++ b/Common/WhitePage.Entities/WhitePage.Entities.csproj
@@ -74,6 +74,7 @@
     <Compile Include="CaseManagement\vCaseOffender.cs" />
     <Compile Include="CaseManagement\vCaseSessionLog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RedAlert\IpFeedback.cs" />
     <Compile Include="RedAlert\PostSvpQC.cs" />
     <Compile Include="RedAlert\PreSvpQC.cs" />
     <Compile Include="RedAlert\ProgrammePlanning.cs" />
